# instanton

./: .gitignore  CHANGELOG.md  COMPETITOR_VERIFICATION_REPORT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.dashboard  Dockerfile.server  README.md  RELEASE.md  docker-compose.yml  errors.txt  instanton_dashboard.db  pyproject.toml
.github/workflows/: ci.yml  release.yml
backend/: main.py
deploy/docker/: .env.oauth.example  README.md  docker-compose.oauth.yml  prometheus.yml
deploy/helm/: README.md
deploy/helm/tachyon/: Chart.yaml  values.yaml
deploy/helm/tachyon/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  pdb.yaml  secret.yaml  service.yaml  serviceaccount.yaml  servicemonitor.yaml
deploy/k8s/: README.md  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  namespace.yaml  pdb.yaml  secret.yaml  service.yaml  serviceaccount.yaml
deploy/vps/: install.sh  quick-setup.sh
docs/: COMPETITOR_ANALYSIS.md  COMPETITOR_COMPARISON.md  IMPLEMENTATION_STATUS.md
frontend/: package-lock.json  package.json  server.js
frontend/public/: index.html
src/instanton/: __init__.py  cli.py  sdk.py
src/instanton/auth/: __init__.py  fido2.py  mfa.py  middleware.py  permissions.py  providers.py
src/instanton/client/: __init__.py  tcp_tunnel.py  tunnel.py  udp_tunnel.py
src/instanton/core/: __init__.py  config.py  congestion.py  exceptions.py  migration.py  multiplexer.py  pool.py  transport.py  webtransport.py
src/instanton/dashboard/: __init__.py  antiabuse.py  app.py  config.py
src/instanton/dashboard/components/: __init__.py  navbar.py  stats_card.py  token_table.py  tunnel_card.py
src/instanton/dashboard/pages/: __init__.py  dashboard.py  inspector.py  login.py  settings.py  tokens.py  tunnels.py
src/instanton/domains/: __init__.py  manager.py  storage.py  verification.py  wildcards.py
src/instanton/ingress/: __init__.py  config.py  engine.py  rules.py
src/instanton/observability/: __init__.py  metrics.py
src/instanton/protocol/: __init__.py  messages.py
src/instanton/routing/: __init__.py  geo.py
src/instanton/security/: __init__.py  acme.py  basicauth.py  certificates.py  certmanager.py  hashing.py  iprestrict.py  ratelimit.py  signing.py
src/instanton/server/: http3.py  main.py  relay.py
src/instanton/webhooks/: __init__.py  providers.py  verifier.py
src/tachyon/: __init__.py  cli.py  sdk.py
src/tachyon/auth/: __init__.py  middleware.py  permissions.py  providers.py  storage.py  tokens.py
src/tachyon/client/: __init__.py  tcp_tunnel.py  tunnel.py  udp_tunnel.py
src/tachyon/core/: __init__.py  config.py  fast_transport.py  ha.py  performance.py  transport.py
src/tachyon/inspector/: __init__.py  replay.py  server.py  storage.py
src/tachyon/observability/: __init__.py  health.py  logging.py  metrics.py  tracing.py
src/tachyon/policy/: __init__.py  engine.py  rules.py
src/tachyon/protocol/: __init__.py  fast_messages.py  messages.py
src/tachyon/security/: __init__.py  certificates.py  ddos.py  firewall.py  hardening.py  ratelimit.py  sanitizer.py  tls.py  zerotrust.py
src/tachyon/server/: __init__.py  main.py  relay.py
src/tachyon/webhooks/: __init__.py  verifier.py
tests/: __init__.py  test_certificates.py  test_circuit_breaker.py  test_cli.py  test_client.py  test_config.py  test_connection_reliability.py  test_ddos.py  test_domains.py  test_exceptions.py  test_fast_messages.py  test_fast_transport.py  test_global_timeout_improvements.py  test_ha.py  test_indefinite_streaming.py  test_inspector.py  test_iprestrict.py  test_loadbalancer.py  test_long_lived_connections.py  test_multi_port_timeout.py  test_oauth.py  test_performance.py  test_policy.py  test_protocol.py  test_protocols.py  test_ratelimit.py  test_scalability.py  test_sdk.py  test_server.py  test_subdomain_uniqueness.py  test_tcp_udp_tunnels.py  test_transport.py  test_transport_advanced.py  test_webhooks.py  test_zerotrust.py
(+23 files in other folders)
