[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "instanton"
version = "0.8.1"
description = "Tunnel through barriers, instantly - expose local services to the internet"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Instanton Contributors" }
]
keywords = ["tunnel", "networking", "proxy", "https", "localhost", "ngrok"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: Proxy Servers",
    "Topic :: System :: Networking",
]

dependencies = [
    # Async - Fast event loop
    "uvloop>=0.22.0; sys_platform != 'win32'",

    # HTTP/WebSocket
    "aiohttp>=3.13.3",
    "websockets>=16.0",

    # QUIC (HTTP/3)
    "aioquic>=1.3.0",

    # gRPC
    "grpcio>=1.76.0",

    # TLS/SSL
    "cryptography>=46.0.3",
    "certifi>=2024.12.0",

    # CLI
    "click>=8.3.1",
    "rich>=14.2.0",

    # Serialization - msgspec for high performance, msgpack for compatibility
    "msgspec>=0.20.0",
    "msgpack>=1.1.2",
    "orjson>=3.11.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.7.0",

    # Compression
    "lz4>=4.4.0",
    "zstandard>=0.25.0",
    "brotli>=1.1.0",

    # Caching
    "cachetools>=5.5.0",

    # Utilities
    "anyio>=4.12.1",
    "httpx>=0.28.1",
    "h2>=4.0.0",
    "structlog>=25.5.0",
    "psutil>=5.9.0",

    # DNS
    "aiodns>=3.2.0",

    # Config file support
    "pyyaml>=6.0",

    # Metrics
    "prometheus-client>=0.21.0",

    # OAuth/OIDC (optional, for self-hosted auth)
    "authlib>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=6.0.0",
    "pytest-benchmark>=5.2.0",
    "ruff>=0.14.10",
    "mypy>=1.15.0",
    "pre-commit>=4.2.0",
    "types-cachetools>=5.5.0",
]

[project.scripts]
instanton = "instanton.cli:main"
instanton-server = "instanton.server.main:main"

[project.urls]
Homepage = "https://github.com/DrRuin/instanton"
Documentation = "https://github.com/DrRuin/instanton#readme"
Repository = "https://github.com/DrRuin/instanton"
Issues = "https://github.com/DrRuin/instanton/issues"
Changelog = "https://github.com/DrRuin/instanton/releases"

[tool.hatch.build.targets.wheel]
packages = ["src/instanton"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = false
warn_return_any = false
warn_unused_ignores = false
ignore_missing_imports = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_configs = true
show_error_codes = true

# Per-module configuration for complex external dependencies
[[tool.mypy.overrides]]
module = [
    "cryptography.*",
    "aioquic.*",
    "aiodns.*",
    "lz4.*",
    "zstandard.*",
    "brotli.*",
    "msgspec.*",
    "msgpack.*",
    "structlog.*",
    "psutil.*",
    "aiohttp.*",
    "websockets.*",
    "grpcio.*",
    "httpx.*",
    "cachetools.*",
]
ignore_errors = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = [
    # Ignore "coroutine was never awaited" warnings from CLI testing
    # These occur when mocking asyncio.run in Click CLI tests
    "ignore:coroutine 'start_tunnel' was never awaited:RuntimeWarning",
    "ignore:coroutine 'start_tcp_tunnel_cli' was never awaited:RuntimeWarning",
    "ignore:coroutine 'start_udp_tunnel_cli' was never awaited:RuntimeWarning",
]

[tool.hatch.metadata]
allow-direct-references = true
